Fix spacing issue with section heading

--- a/app/assets/stylesheets/public/texts.scss
+++ b/app/assets/stylesheets/public/texts.scss
@@ -13,6 +13,7 @@ $metadata-spacing: 0;
       font-size: 20px;
       font-weight: bold;
       margin-bottom: .5em;
+      margin-top: 1em
     }
 
     margin-bottom: 2em;
