--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -357,6 +357,8 @@ main {
 .public {
   .back-link {
     padding-top: 2rem;
+    margin-bottom: 1em;
+    display: inline-block
   }
 }
 
